--- a/automated_anki.html
+++ b/automated_anki.html
@@ -5,7 +5,6 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Automated Seach of Sentences</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script>
 
         const getFirstRowElement = async(firstRow) => {
@@ -44,6 +43,7 @@
                 if(tooltip[j].childNodes == undefined) continue;
                 if(tooltip[j].childNodes[0].nodeValue == 'US:') {
                     wordObj.pronounce = tooltip[j+1].childNodes[1].nodeValue
+                    break;
                 }
             }
 
